# kodegen-simd

./: Cargo.toml  README.md
benches/: argmax.rs  softmax.rs  temperature.rs
src/: config.rs  context.rs  lib.rs  serde_constraints.rs  utils.rs
src/benchmark/: mod.rs
src/logits/: mod.rs  nucleus.rs  processing.rs  processor.rs  topk.rs
src/logits/constraints/: json.rs  mod.rs  processor.rs  schema.rs  schema_index.rs  schema_parser.rs  types.rs
src/ops/: argmax.rs  softmax.rs  temperature.rs
src/similarity/: metrics.rs  mod.rs
src/similarity/simd/: mod.rs
src/similarity/simd/x86/: avx2.rs  avx512.rs  mod.rs  sse41.rs
tests/: config.rs  context.rs  lib.rs  ops.rs  serde_constraints.rs  simd_correctness.rs  similarity.rs  similarity_metrics.rs  utils.rs
